--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,43 +1,98 @@
-# improve colors
-set -g default-terminal "screen-256color"
+# act like GNU screen -- nah...
+# unbind C-b
+# set -g prefix C-a
 
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+set -g default-command "reattach-to-user-namespace -l zsh"
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# enable copy-paste http://goo.gl/DN82E
-# enable RubyMotion http://goo.gl/WDlCy
-# set -g default-command "reattach-to-user-namespace -l zsh"
-
-# act like vim
-# setw -g mode-keys vi
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-# bind-key -r C-h select-window -t :-
-# bind-key -r C-l select-window -t :+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Smart pane switching with awareness of vim splits
-# bind -n C-k run-shell 'tmux-vim-select-pane -U'
-# bind -n C-j run-shell 'tmux-vim-select-pane -D'
-# bind -n C-h run-shell 'tmux-vim-select-pane -L'
-# bind -n C-l run-shell 'tmux-vim-select-pane -R'
-# bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 bind -n C-k if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-k" "select-pane -U"
 bind -n C-j if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-j" "select-pane -D"
 bind -n C-h if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-h" "select-pane -L"
 bind -n C-l if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-l" "select-pane -R"
 bind -n "C-\\" if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-\\" "select-pane -l"
-
+bind -r h resize-pane -L 10
+bind -r j resize-pane -D 10
+bind -r k resize-pane -U 10
+bind -r l resize-pane -R 10
 
 # Pane switching using the ... Mouse ...
+setw -g mode-mouse on
 set-option -g mouse-select-pane on
+
+set-option -g base-index 1
+
+
+set-option -sg escape-time 50
+set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
+
+set -g default-terminal "screen-256color" # improve colors
+set -g base-index 1 # Start numbering windows at 1, not 0
+
+# status bar
+set -g status on
+set -g status-left-length 40
+set -g status-right-length 40
+set -g status-left '#[fg=green]#H:#[fg=colour118]#S     '
+set -g status-right '  %d %b %R  '
+set -g status-bg black
+set -g status-fg white
+set -g status-utf8 on
+set -g status-justify centre
+
+set -g set-titles on
+set -g set-titles-string '#H:#S  #W #P'
+set -g visual-activity on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+setw -g mode-mouse on
+setw -g mode-keys vi
+setw -g utf8 on
+setw -g automatic-rename on
+setw -g monitor-activity on
+
+setw -g window-status-fg colour241
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg colour196
+setw -g window-status-current-bg black
+setw -g window-status-current-attr bright
+
+
+#==============
+# CHEAT SHEET
+#==============
+# Prefix C-a   - pass-through
+# Prefix C-r   - reload tmux.conf
+# Prefix C-s   - choose session
+# Prefix d     - detach from session
+# Prefix c     - create window
+# Prefix r     - rename window
+# Prefix w     - list windows
+# Prefix n     - next window
+# Prefix p     - previous window
+# Prefix space - last window
+# Prefix 1-9   - goto window n
+# Prefix s     - show pane numbers
+# Prefix q     - quit pane
+# Prefix ?     - list all bindings
+# Prefix :     - command-line
+# Prefix |     - horizontal split
+# Prefix -     - vertical split
+# Prefix C-c   - copy mode
+# Prefix C-v   - paste
+# Prefix PgUp  - scroll mode
+
