--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -15,6 +15,9 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# re-number windows when one is closed
+set -g renumber-windows on
+
 # Smart pane switching with awareness of vim splits
 bind -n C-k if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-k" "select-pane -U"
 bind -n C-j if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-j" "select-pane -D"
@@ -26,33 +29,39 @@ bind -r j resize-pane -D 10
 bind -r k resize-pane -U 10
 bind -r l resize-pane -R 10
 
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
 # Pane switching using the ... Mouse ...
 setw -g mode-mouse on
 set-option -g mouse-select-pane on
 
 set-option -g base-index 1
 
-
-set-option -sg escape-time 50
 set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
 set -g default-terminal "screen-256color" # improve colors
 set -g base-index 1 # Start numbering windows at 1, not 0
 
-# status bar
+###########################
+# Status Bar
+###########################
+
 set -g status on
 set -g status-left-length 40
 set -g status-right-length 40
-set -g status-left '#[fg=green]#H:#[fg=colour118]#S     '
-set -g status-right '  %d %b %R  '
-set -g status-bg black
-set -g status-fg white
+set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S     '
+set -g status-right '#(~/.dotfiles/bin/battery.sh)  #[fg=colour64]%d %b %R  '
+set -g status-bg colour234
+set -g status-fg colour238
 set -g status-utf8 on
 set -g status-justify centre
 
 set -g set-titles on
 set -g set-titles-string '#H:#S  #W #P'
-set -g visual-activity on
+# set -g visual-activity on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
@@ -63,14 +72,15 @@ setw -g utf8 on
 setw -g automatic-rename on
 setw -g monitor-activity on
 
-setw -g window-status-fg colour241
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-format ' #I:#W '
+setw -g window-status-fg colour238
+setw -g window-status-bg black
 
-setw -g window-status-current-fg colour196
+setw -g window-status-current-fg colour64
 setw -g window-status-current-bg black
-setw -g window-status-current-attr bright
+setw -g window-status-current-format '[#[fg=colour241]#I:#W#[fg=colour64]]'
 
+set -g status-interval 10
 
 #==============
 # CHEAT SHEET
@@ -95,4 +105,3 @@ setw -g window-status-current-attr bright
 # Prefix C-c   - copy mode
 # Prefix C-v   - paste
 # Prefix PgUp  - scroll mode
-
