--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -15,6 +15,9 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# decrease command delay (increases vim responsiveness)
+set -sg escape-time 0
+
 # re-number windows when one is closed
 set -g renumber-windows on
 
