--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -3,6 +3,7 @@
 # set -g prefix C-a
 
 set -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g history-limit 10000
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
