--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -33,6 +33,9 @@ bind -r j resize-pane -D 10
 bind -r k resize-pane -U 10
 bind -r l resize-pane -R 10
 
+# Open new window with current path
+bind-key c  new-window -c "#{pane_current_path}"
+
 # command/message line colors
 set -g message-fg white
 set -g message-bg black
