--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -36,14 +36,17 @@ bind -r l resize-pane -R 10
 # Open new window with current path
 bind-key c  new-window -c "#{pane_current_path}"
 
+# fix ssh agent when tmux is detached
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
 # command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+# set -g message-fg white
+# set -g message-bg black
+# set -g message-attr bright
 
 # Pane switching using the ... Mouse ...
-setw -g mode-mouse on
-set-option -g mouse-select-pane on
+setw -g mode-mouse off
+set-option -g mouse-select-pane off
 
 set-option -g base-index 1
 
@@ -68,7 +71,7 @@ set -g status-justify centre
 
 set -g set-titles on
 set -g set-titles-string '#H:#S  #W #P'
-# set -g visual-activity on
+set -g visual-activity on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
@@ -80,12 +83,7 @@ setw -g automatic-rename on
 setw -g monitor-activity on
 
 setw -g window-status-format ' #I:#W '
-setw -g window-status-fg colour238
-setw -g window-status-bg black
-
-setw -g window-status-current-fg colour64
-setw -g window-status-current-bg black
-setw -g window-status-current-format '[#[fg=colour241]#I:#W#[fg=colour64]]'
+setw -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
 
 set -g status-interval 10
 
@@ -112,3 +110,36 @@ set -g status-interval 10
 # Prefix C-c   - copy mode
 # Prefix C-v   - paste
 # Prefix PgUp  - scroll mode
+
+#### AUTO SOLARIZED
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
