Start new windows in same directory

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -34,7 +34,9 @@ bind -r k resize-pane -U 10
 bind -r l resize-pane -R 10
 
 # Open new window with current path
-bind-key c  new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
