Use tmux plugin manager & use some plugins

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -46,10 +46,6 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 # set -g message-bg black
 # set -g message-attr bright
 
-# Pane switching using the ... Mouse ...
-setw -g mode-mouse off
-set-option -g mouse-select-pane off
-
 set-option -g base-index 1
 
 set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
@@ -74,11 +70,7 @@ set -g status-justify centre
 set -g set-titles on
 set -g set-titles-string '#H:#S  #W #P'
 set -g visual-activity on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
 
-setw -g mode-mouse on
 setw -g mode-keys vi
 setw -g utf8 on
 setw -g automatic-rename on
@@ -113,4 +105,13 @@ set -g status-interval 10
 # Prefix C-v   - paste
 # Prefix PgUp  - scroll mode
 
-#### AUTO SOLARIZED
+# List of plugins
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
