--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -2,19 +2,11 @@
 # unbind C-b
 # set -g prefix C-a
 
-set -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g history-limit 10000
+set -g default-command "/usr/local/bin/zsh"
+set-option -g history-limit 20000
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 0
@@ -107,6 +99,7 @@ set -g status-interval 10
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
