Start pane index at 1, remove duplicate definition

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -39,11 +39,11 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 # set -g message-attr bright
 
 set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
 set -g default-terminal "screen-256color" # improve colors
-set -g base-index 1 # Start numbering windows at 1, not 0
 
 ###########################
 # Status Bar
