--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -10,16 +10,18 @@ set -sg escape-time 0
 # re-number windows when one is closed
 set -g renumber-windows on
 
-# Smart pane switching with awareness of vim splits
-bind -n C-k if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-k" "select-pane -U"
-bind -n C-j if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-j" "select-pane -D"
-bind -n C-h if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-h" "select-pane -L"
-bind -n C-l if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-l" "select-pane -R"
-bind -n "C-\\" if "[ $(tmux display -p '#{pane_current_command}') = vim ]" "send-keys C-\\" "select-pane -l"
-bind -r h resize-pane -L 10
-bind -r j resize-pane -D 10
-bind -r k resize-pane -U 10
-bind -r l resize-pane -R 10
+bind -r h select-pane -U
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+bind -r C-h select-pane -U
+bind -r C-j select-pane -D
+bind -r C-k select-pane -U
+bind -r C-l select-pane -R
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 # Open new window with current path
 bind '"' split-window -c "#{pane_current_path}"
