Learn the shell type from $SHELL

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-command "/usr/local/bin/zsh"
+set-option -g default-shell $SHELL
 set-option -g history-limit 20000
 
 # Use vim keybindings in copy mode
