Re-add vi copy/paste bindings

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,8 +1,17 @@
-set-option -g default-shell $SHELL
-set-option -g history-limit 20000
+# set-option -g default-shell $SHELL
+set-option -g default-command "/usr/local/bin/reattach-to-user-namespace -l zsh"
+set-option -g history-limit 10000
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 0
