Updates to tmux config

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,17 +1,9 @@
 # set-option -g default-shell $SHELL
-set-option -g default-command "/usr/local/bin/reattach-to-user-namespace -l zsh"
 set-option -g history-limit 10000
+set -g mouse
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+set -g mode-keys vi
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 0
@@ -103,13 +95,12 @@ set -g status-interval 10
 # Prefix PgUp  - scroll mode
 
 # List of plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @tmux-yank-start-selection 'v'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
