Allows clipboard to work again on OSX Sierra

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,4 +1,5 @@
-# set-option -g default-shell $SHELL
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set-option -g history-limit 10000
 set -g mouse
 
