--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -100,8 +100,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @tmux-yank-start-selection 'v'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
 set -g @plugin 'tmux-plugins/tmux-open'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
