--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -12,14 +12,6 @@ set -sg escape-time 0
 # re-number windows when one is closed
 set -g renumber-windows on
 
-bind -r h select-pane -U
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
-bind -r C-h select-pane -U
-bind -r C-j select-pane -D
-bind -r C-k select-pane -U
-bind -r C-l select-pane -R
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
@@ -96,13 +88,17 @@ set -g status-interval 10
 # Prefix PgUp  - scroll mode
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @tmux-yank-start-selection 'v'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'robhurring/tmux-spotify'
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
+
+
+set -g @tmux-yank-start-selection 'v'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
