Try out displaying current playing music track

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -42,10 +42,10 @@ set -g default-terminal "screen-256color" # improve colors
 ###########################
 
 set -g status on
-set -g status-left-length 40
-set -g status-right-length 40
-set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S     '
-set -g status-right '#(~/.dotfiles/bin/battery.sh)  #[fg=colour64]%d %b %R  '
+set -g status-left-length 20
+set -g status-right-length 80
+set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
+set -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
 set -g status-bg colour234
 set -g status-fg colour238
 set -g status-justify centre
