Tweak tmux settings for better use with tmuxinator

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -35,7 +35,7 @@ set-window-option -g pane-base-index 1
 
 set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
-set -g default-terminal "screen-256color" # improve colors
+set -g default-terminal "screen-256color-bce" # improve colors
 
 ###########################
 # Status Bar
@@ -50,12 +50,12 @@ set -g status-bg colour234
 set -g status-fg colour238
 set -g status-justify centre
 
-set -g set-titles on
+set -g set-titles off
 set -g set-titles-string '#H:#S  #W #P'
 set -g visual-activity on
 
 setw -g mode-keys vi
-setw -g automatic-rename on
+setw -g automatic-rename off
 setw -g monitor-activity on
 
 setw -g window-status-format ' #I:#W '
@@ -92,7 +92,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'robhurring/tmux-spotify'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
