--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -96,6 +96,7 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 
 set -g @tmux-yank-start-selection 'v'
