--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -41,27 +41,23 @@ set -g default-terminal "screen-256color-bce" # improve colors
 # Status Bar
 ###########################
 
-set -g status on
-set -g status-left-length 20
-set -g status-right-length 80
-set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
-set -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
-set -g status-bg colour234
-set -g status-fg colour238
-set -g status-justify centre
-
+set -g automatic-rename on
+set -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
+set -g monitor-activity on
 set -g set-titles off
 set -g set-titles-string '#H:#S  #W #P'
-set -g visual-activity on
-
-setw -g mode-keys vi
-setw -g automatic-rename off
-setw -g monitor-activity on
-
-setw -g window-status-format ' #I:#W '
-setw -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
-
+set -g status on
+set -g status-bg colour234
+set -g status-fg colour238
 set -g status-interval 10
+set -g status-justify centre
+set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
+set -g status-left-length 20
+set -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
+set -g status-right-length 80
+set -g visual-activity on
+set -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
+set -g window-status-format ' #I:#W '
 
 #==============
 # CHEAT SHEET
@@ -97,6 +93,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
 
 
 set -g @tmux-yank-start-selection 'v'
