Sort tmux set-(window-)option config

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,16 +1,32 @@
-set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
+set-option -g base-index 1
+set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-option -g default-shell $SHELL
+set-option -g default-terminal "screen-256color-bce" # improve colors
+set-option -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
 set-option -g history-limit 10000
-set -g mouse
+set-option -g mode-keys vi
+set-option -g monitor-activity on
+set-option -g mouse
+set-option -g renumber-windows on
+set-option -g set-titles off
+set-option -g set-titles-string '#H:#S  #W #P'
+set-option -g status on
+set-option -g status-bg colour234
+set-option -g status-fg colour238
+set-option -g status-interval 10
+set-option -g status-justify centre
+set-option -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
+set-option -g status-left-length 20
+set-option -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
+set-option -g status-right-length 80
+set-option -g visual-activity on
+set-option -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
+set-option -g window-status-format ' #I:#W '
 
-# Use vim keybindings in copy mode
-set -g mode-keys vi
-
-# decrease command delay (increases vim responsiveness)
-set -sg escape-time 0
-
-# re-number windows when one is closed
-set -g renumber-windows on
+set-window-option -g pane-base-index 1
+set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
@@ -24,40 +40,6 @@ bind c new-window -c "#{pane_current_path}"
 
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
-
-# command/message line colors
-# set -g message-fg white
-# set -g message-bg black
-# set -g message-attr bright
-
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-
-set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
-
-set -g default-terminal "screen-256color-bce" # improve colors
-
-###########################
-# Status Bar
-###########################
-
-set -g automatic-rename on
-set -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
-set -g monitor-activity on
-set -g set-titles off
-set -g set-titles-string '#H:#S  #W #P'
-set -g status on
-set -g status-bg colour234
-set -g status-fg colour238
-set -g status-interval 10
-set -g status-justify centre
-set -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
-set -g status-left-length 20
-set -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
-set -g status-right-length 80
-set -g visual-activity on
-set -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
-set -g window-status-format ' #I:#W '
 
 #==============
 # CHEAT SHEET
@@ -83,20 +65,17 @@ set -g window-status-format ' #I:#W '
 # Prefix C-v   - paste
 # Prefix PgUp  - scroll mode
 
-# List of plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'robhurring/tmux-spotify'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'wfxr/tmux-fzf-url'
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'robhurring/tmux-spotify'
+set-option -g @plugin 'seebi/tmux-colors-solarized'
+set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
+set-option -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set-option -g @plugin 'tmux-plugins/tmux-copycat'
+set-option -g @plugin 'tmux-plugins/tmux-open'
+set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'wfxr/tmux-fzf-url'
 
+set-option -g @tmux-yank-start-selection 'v'
 
-set -g @tmux-yank-start-selection 'v'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm' # keep at EOF
