--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -66,6 +66,7 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 # Prefix PgUp  - scroll mode
 
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'morantron/tmux-fingers'
 set-option -g @plugin 'robhurring/tmux-spotify'
 set-option -g @plugin 'seebi/tmux-colors-solarized'
 set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
@@ -77,5 +78,6 @@ set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'wfxr/tmux-fzf-url'
 
 set-option -g @tmux-yank-start-selection 'v'
+set-option -g @fingers-compact-hints '0'
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
