Update tmux plugin list

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -11,7 +11,7 @@ set-option -g monitor-activity on
 set-option -g mouse
 set-option -g renumber-windows on
 set-option -g set-titles off
-set-option -g set-titles-string '#H:#S  #W #P'
+# set-option -g set-titles-string '#H:#S  #W #P'
 set-option -g status on
 set-option -g status-bg colour234
 set-option -g status-fg colour238
@@ -66,18 +66,19 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 # Prefix PgUp  - scroll mode
 
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'laktak/extrakto'
 set-option -g @plugin 'morantron/tmux-fingers'
 set-option -g @plugin 'robhurring/tmux-spotify'
 set-option -g @plugin 'seebi/tmux-colors-solarized'
 set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
-set-option -g @plugin 'thewtex/tmux-mem-cpu-load'
-# set-option -g @plugin 'tmux-plugins/tmux-copycat'
 set-option -g @plugin 'tmux-plugins/tmux-open'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'wfxr/tmux-fzf-url'
 
+set-option -g @fingers-highlight-format '#[fg=green,bold]%s'
+set-option -g @fingers-hint-format '#[fg=red,bold]%s'
 set-option -g @tmux-yank-start-selection 'v'
-set-option -g @fingers-compact-hints '0'
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
+run-shell ~/clone/path/extrakto.tmux
