--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -24,6 +24,8 @@ set-option -g status-right-length 80
 set-option -g visual-activity on
 set-option -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
 set-option -g window-status-format ' #I:#W '
+set-option -g pane-active-border-style bg=default,fg=magenta
+set-option -g pane-border-style fg=green
 
 set-window-option -g pane-base-index 1
 set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
