Add how-to note to install/update tmux plugins

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -82,3 +82,6 @@ set-option -g @fingers-hint-format '#[fg=red,bold]%s'
 set-option -g @tmux-yank-start-selection 'v'
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
+# Prefix I - Install plugins
+# Prefix U - Update plugins
+# Prefix alt u - Remove/Uninstall plugins not in the list above
