Cleanup tmuxrc; trim unused plugins

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,7 +1,5 @@
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
 set-option -g base-index 1
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set-option -g default-shell $SHELL
 set-option -g default-terminal "screen-256color-bce" # improve colors
 set-option -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
@@ -19,7 +17,7 @@ set-option -g status-interval 5
 set-option -g status-justify centre
 set-option -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
 set-option -g status-left-length 20
-set-option -g status-right '#{spotify_artist} - #{spotify_track} #(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
+set-option -g status-right '#(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
 set-option -g status-right-length 80
 set-option -g visual-activity on
 set-option -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
@@ -68,20 +66,29 @@ setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 # Prefix PgUp  - scroll mode
 
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
-set-option -g @plugin 'morantron/tmux-fingers'
-set-option -g @plugin 'robhurring/tmux-spotify'
-set-option -g @plugin 'seebi/tmux-colors-solarized'
-set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
-set-option -g @plugin 'tmux-plugins/tmux-open'
-set-option -g @plugin 'tmux-plugins/tmux-yank'
-set-option -g @plugin 'tmux-plugins/tpm'
-set-option -g @plugin 'wfxr/tmux-fzf-url'
 
-set-option -g @fingers-highlight-format '#[fg=green,bold]%s'
-set-option -g @fingers-hint-format '#[fg=red,bold]%s'
+set-option -g @plugin 'seebi/tmux-colors-solarized'
+
+set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
+set-option -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
+
+set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @tmux-yank-start-selection 'v'
+set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# Prefix y - Copies from cursor forwards into the clipboard
+# Copy Mode
+#  y - copy selection to system clipboard.
+#  Y (shift-y) - "put" selection. Equivalent to copying a selection, and pasting it to the command line.
+
+set-option -g @plugin 'tmux-plugins/tpm'
+# Prefix I - Install plugins & Refresh TMUX env
+# Prefix U - Update plugins & Refresh TMUX env
+# Prefix alt u - Remove/Uninstall plugins not in the list above
+
+set-option -g @plugin 'wfxr/tmux-fzf-url'
+# Prefix u - Open FZF list of URLs on Scrollback buffer
+
+set -g @plugin 'roosta/tmux-fuzzback'
+# Prefix
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
-# Prefix I - Install plugins
-# Prefix U - Update plugins
-# Prefix alt u - Remove/Uninstall plugins not in the list above
