Update zshrc config

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -89,6 +89,6 @@ set-option -g @plugin 'wfxr/tmux-fzf-url'
 # Prefix u - Open FZF list of URLs on Scrollback buffer
 
 set -g @plugin 'roosta/tmux-fuzzback'
-# Prefix
+# Prefix ?
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
