Rework tmux config

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -1,32 +1,22 @@
-set-option -g automatic-rename on
-set-option -g base-index 1
-set-option -g default-shell $SHELL
-set-option -g default-terminal "screen-256color-bce" # improve colors
-set-option -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
-set-option -g history-limit 100000
-set-option -g mode-keys vi
-set-option -g monitor-activity on
-set-option -g mouse
-set-option -g renumber-windows on
-set-option -g set-titles off
-# set-option -g set-titles-string '#H:#S  #W #P'
-set-option -g status on
-set-option -g status-bg colour234
-set-option -g status-fg colour238
-set-option -g status-interval 5
-set-option -g status-justify centre
-set-option -g status-left '#[fg=colour64]#H:#[fg=colour118]#S'
-set-option -g status-left-length 20
-set-option -g status-right '#(~/.dotfiles/bin/battery.sh) #[fg=colour13]%a #[fg=colour14]%m/%d #[fg=colour64]%R '
-set-option -g status-right-length 80
-set-option -g visual-activity on
-set-option -g window-status-current-format '#[fg=colour64][#[fg=colour241]#I:#W#[fg=colour64]]'
-set-option -g window-status-format ' #I:#W '
-set-option -g pane-active-border-style bg=default,fg=magenta
-set-option -g pane-border-style fg=green
+# vim:fdm=marker
+set -g automatic-rename on
+set -g base-index 1
+set -g default-shell $SHELL
+set -g default-terminal "screen-256color-bce" # improve colors
+set -g escape-time 0 # decrease command delay (increases vim responsiveness) # NOTE: removed -s
+set -g history-limit 100000
+set -g mode-keys vi
+set -g monitor-activity on
+set -g mouse
+set -g renumber-windows on
+set -g set-titles off
+set -g status on
+set -g status-bg colour234
+set -g status-fg colour238
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-set-window-option -g pane-base-index 1
-set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
+set-window -g pane-base-index 1
+set-window -g xterm-keys on # to make ctrl-arrow, etc. work
 
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
@@ -41,54 +31,44 @@ bind c new-window -c "#{pane_current_path}"
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
-#==============
-# CHEAT SHEET
-#==============
-# Prefix C-a   - pass-through
-# Prefix C-r   - reload tmux.conf
-# Prefix C-s   - choose session
-# Prefix d     - detach from session
-# Prefix c     - create window
-# Prefix r     - rename window
-# Prefix w     - list windows
-# Prefix n     - next window
-# Prefix p     - previous window
-# Prefix space - last window
-# Prefix 1-9   - goto window n
-# Prefix s     - show pane numbers
-# Prefix q     - quit pane
-# Prefix ?     - list all bindings
-# Prefix :     - command-line
-# Prefix |     - horizontal split
-# Prefix -     - vertical split
-# Prefix C-c   - copy mode
-# Prefix C-v   - paste
-# Prefix PgUp  - scroll mode
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'sainnhe/tmux-fzf' # {{{ Prefix F -
+# }}}
+set -g @plugin 'tmux-plugins/tmux-yank' # {{{ Prefix v - start selection
+set -g @tmux-yank-start-selection 'v'
+# }}}
+set -g @plugin 'wfxr/tmux-fzf-url' # {{{ Prefix u - fzf URL
+# }}}
+set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
+# }}}
+set -g @plugin '2kabhishek/tmux2k' # {{{
+set -g @tmux2k-theme 'gruvbox'
+set -g @tmux2k-icons-only true
+set -g @tmux2k-left-plugins "git cpu ram"
+set -g @tmux2k-right-plugins "battery network pomodoro time"
+set -g @tmux2k-show-powerline true
+set -g @tmux2k-show-fahrenheit false
+set -g @tmux2k-time-format "%H:%M"
+set -g @tmux2k-time-icon " "
+set -g @tmux2k-border-contrast false
+set -g @tmux2k-window-list-compact false
 
-set-option -g @plugin 'christoomey/vim-tmux-navigator'
+# update powerline symbols
+set -g @tmux2k-left-sep ""
+set -g @tmux2k-right-sep ""
+set -g @tmux2k-window-list-left-sep ""
+set -g @tmux2k-window-list-right-sep ""
 
-set-option -g @plugin 'seebi/tmux-colors-solarized'
-
-set-option -g @plugin 'soyuka/tmux-current-pane-hostname'
-set-option -g automatic-rename-format '#{pane_current_command} #{b:pane_current_path}/'
-
-set-option -g @plugin 'tmux-plugins/tmux-yank'
-set-option -g @tmux-yank-start-selection 'v'
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
-# Prefix y - Copies from cursor forwards into the clipboard
-# Copy Mode
-#  y - copy selection to system clipboard.
-#  Y (shift-y) - "put" selection. Equivalent to copying a selection, and pasting it to the command line.
-
-set-option -g @plugin 'tmux-plugins/tpm'
+# change refresh rate
+set -g @tmux2k-refresh-rate 1
+# }}}
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'tmux-plugins/tpm'
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
 
-set-option -g @plugin 'wfxr/tmux-fzf-url'
-# Prefix u - Open FZF list of URLs on Scrollback buffer
-
-set -g @plugin 'roosta/tmux-fuzzback'
-# Prefix ?
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
