--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -43,17 +43,18 @@ set -g @plugin 'wfxr/tmux-fzf-url' # {{{ Prefix u - fzf URL
 # }}}
 set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 # }}}
-set -g @plugin '2kabhishek/tmux2k' # {{{
-set -g @tmux2k-theme 'gruvbox'
-set -g @tmux2k-icons-only true
+set -g @plugin '2kabhishek/tmux2k' # {{{ Status Bar
+set -g @tmux2k-border-contrast false
+set -g @tmux2k-icons-only false
 set -g @tmux2k-left-plugins "git cpu ram"
 set -g @tmux2k-right-plugins "battery network pomodoro time"
-set -g @tmux2k-show-powerline true
 set -g @tmux2k-show-fahrenheit false
-set -g @tmux2k-time-format "%H:%M"
+set -g @tmux2k-show-powerline true
+set -g @tmux2k-theme 'gruvbox'
+set -g @tmux2k-time-format "%H:%M "
 set -g @tmux2k-time-icon " "
-set -g @tmux2k-border-contrast false
-set -g @tmux2k-window-list-compact false
+set -g @tmux2k-window-list-format '#I:#W'
+set -g @tmux2k-window-list-compact true
 
 # update powerline symbols
 set -g @tmux2k-left-sep ""
