Mostly allow fullscreen on OSX laptop
Macbook camera removes a section of pixels.
In tmux with the status bar to the top and pane list to the left this
only impacts me when I have a large number of panes inside the same
session.

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -11,6 +11,7 @@ set -g mouse
 set -g renumber-windows on
 set -g set-titles off
 set -g status on
+set -g status-position top
 set -g status-bg colour234
 set -g status-fg colour238
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
@@ -53,6 +54,7 @@ set -g @tmux2k-show-powerline true
 set -g @tmux2k-theme 'gruvbox'
 set -g @tmux2k-time-format "%H:%M "
 set -g @tmux2k-time-icon " "
+set -g @tmux2k-window-list-alignment left
 set -g @tmux2k-window-list-format '#I:#W'
 set -g @tmux2k-window-list-compact true
 
