--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -10,7 +10,7 @@ set -g monitor-activity on
 set -g mouse
 set -g renumber-windows on
 set -g set-titles off
-set -g status on
+set -g status 2
 set -g status-position top
 set -g status-bg colour234
 set -g status-fg colour238
@@ -47,7 +47,7 @@ set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 set -g @plugin '2kabhishek/tmux2k' # {{{ Status Bar
 set -g @tmux2k-border-contrast false
 set -g @tmux2k-icons-only false
-set -g @tmux2k-left-plugins "git cpu ram"
+set -g @tmux2k-left-plugins false
 set -g @tmux2k-right-plugins "battery network pomodoro time"
 set -g @tmux2k-show-fahrenheit false
 set -g @tmux2k-show-powerline true
@@ -56,7 +56,7 @@ set -g @tmux2k-time-format "%H:%M "
 set -g @tmux2k-time-icon " "
 set -g @tmux2k-window-list-alignment left
 set -g @tmux2k-window-list-format '#I:#W'
-set -g @tmux2k-window-list-compact true
+set -g @tmux2k-window-list-compact false
 
 # update powerline symbols
 set -g @tmux2k-left-sep ""
