--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -68,6 +68,7 @@ set -g @tmux2k-window-list-right-sep ""
 set -g @tmux2k-refresh-rate 1
 # }}}
 set -g @plugin 'olimorris/tmux-pomodoro-plus' # {{{
+set -g @pomodoro_cancel 'T'
 set -g @pomodoro_complete "#[fg=$text_green]󰗇 "
 set -g @pomodoro_granularity 'on'
 set -g @pomodoro_interval_display " [%s/%s]"
@@ -77,6 +78,7 @@ set -g @pomodoro_pause "#[fg=$color_yellow]󰐓 "
 set -g @pomodoro_prompt_break "#[fg=$color_green]󰷲 ? "
 set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲 ? "
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
+set -g @pomodoro_toggle 't'
 # }}}
 set -g @plugin 'tmux-plugins/tpm'
 # Prefix I - Install plugins & Refresh TMUX env
