Improve tmux bar & format fzf-tab switch groups

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -52,7 +52,7 @@ set -g @tmux2k-right-plugins "battery network pomodoro time"
 set -g @tmux2k-show-fahrenheit false
 set -g @tmux2k-show-powerline true
 set -g @tmux2k-theme 'gruvbox'
-set -g @tmux2k-time-format "%H:%M "
+set -g @tmux2k-time-format "%Y-%m-%d %H:%M "
 set -g @tmux2k-time-icon " "
 set -g @tmux2k-window-list-alignment left
 set -g @tmux2k-window-list-format '#I:#W'
