--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -59,7 +59,7 @@ set -g @tmux2k-window-list-format '#I:#W'
 set -g @tmux2k-window-list-compact false
 
 # update powerline symbols
-set -g @tmux2k-left-sep ""
+set -g @tmux2k-left-sep " "
 set -g @tmux2k-right-sep ""
 set -g @tmux2k-window-list-left-sep ""
 set -g @tmux2k-window-list-right-sep ""
