--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -28,6 +28,8 @@ bind -r L resize-pane -R 10
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind-key -r Left swap-window -t -1
+bind-key -r Right swap-window -t +1
 
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
@@ -84,6 +86,5 @@ set -g @plugin 'tmux-plugins/tpm'
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
-
 
 run '~/.tmux/plugins/tpm/tpm' # keep at EOF
