Move tmux pomodoro to left

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -49,8 +49,8 @@ set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 set -g @plugin '2kabhishek/tmux2k' # {{{ Status Bar
 set -g @tmux2k-border-contrast false
 set -g @tmux2k-icons-only false
-set -g @tmux2k-left-plugins false
-set -g @tmux2k-right-plugins "battery network pomodoro time"
+set -g @tmux2k-left-plugins "pomodoro"
+set -g @tmux2k-right-plugins "battery network time"
 set -g @tmux2k-show-fahrenheit false
 set -g @tmux2k-show-powerline true
 set -g @tmux2k-theme 'gruvbox'
@@ -61,7 +61,7 @@ set -g @tmux2k-window-list-format '#I:#W'
 set -g @tmux2k-window-list-compact false
 
 # update powerline symbols
-set -g @tmux2k-left-sep " "
+set -g @tmux2k-left-sep ""
 set -g @tmux2k-right-sep ""
 set -g @tmux2k-window-list-left-sep ""
 set -g @tmux2k-window-list-right-sep ""
