Update tmux plugins

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -35,8 +35,8 @@ bind-key -r Right swap-window -t +1
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name' # {{{ Nerd Font Pane Icons
+# }}}
 set -g @plugin 'sainnhe/tmux-fzf' # {{{ Prefix F -
 # }}}
 set -g @plugin 'tmux-plugins/tmux-yank' # {{{ Prefix v - start selection
