--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -43,22 +43,24 @@ set -g @plugin 'tmux-plugins/tmux-yank' # {{{ Prefix v - start selection
 set -g @tmux-yank-start-selection 'v'
 # }}}
 set -g @plugin 'wfxr/tmux-fzf-url' # {{{ Prefix u - fzf URL
+set -g @fzf-url-extra-filter 'grep -oE "zgenom load \b[\w\/]\b"'
+
 # }}}
 set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 # }}}
 set -g @plugin '2kabhishek/tmux2k' # {{{ Status Bar
 set -g @tmux2k-border-contrast false
 set -g @tmux2k-icons-only false
-set -g @tmux2k-left-plugins "pomodoro"
-set -g @tmux2k-right-plugins "battery network time"
+set -g @tmux2k-left-plugins false
+set -g @tmux2k-right-plugins "pomodoro time battery"
 set -g @tmux2k-show-fahrenheit false
 set -g @tmux2k-show-powerline true
 set -g @tmux2k-theme 'gruvbox'
-set -g @tmux2k-time-format "%Y-%m-%d %H:%M "
+set -g @tmux2k-time-format "%Y-%m-%d %H:%M"
 set -g @tmux2k-time-icon " "
 set -g @tmux2k-window-list-alignment left
-set -g @tmux2k-window-list-format '#I:#W'
-set -g @tmux2k-window-list-compact false
+set -g @tmux2k-window-list-format '#W #I'
+set -g @tmux2k-window-list-compact true
 
 # update powerline symbols
 set -g @tmux2k-left-sep ""
