Manage tmux tpm from tmux.conf

--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -84,9 +84,13 @@ set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲 ? "
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
 set -g @pomodoro_toggle 't'
 # }}}
-set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'tmux-plugins/tpm' # {{{
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
+# }}}
 
-run '~/.tmux/plugins/tpm/tpm' # keep at EOF
+if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm'"
+run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
