Migrate $HOME to XDG

--- a/lib/config/alacritty/alacritty.toml
+++ b/lib/config/alacritty/alacritty.toml
@@ -9,6 +9,8 @@ family = "Inconsolata Nerd Font Propo"
 style = "Regular"
 [font.bold]
 style = "Bold"
+[font.italic]
+style = "Italic"
 
 [window]
 decorations = "Transparent"
