--- a/lib/config/tmux/.tmux.conf
+++ b/lib/config/tmux/.tmux.conf
@@ -31,6 +31,9 @@ bind c new-window -c "#{pane_current_path}"
 bind-key -r Left swap-window -t -1
 bind-key -r Right swap-window -t +1
 
+bind-key -r g run-shell -C 'openapp'
+bind-key -r h run -C '$XDG_CONFIG_HOME'
+
 # fix ssh agent when tmux is detached
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
@@ -84,13 +87,15 @@ set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲 ? "
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
 set -g @pomodoro_toggle 't'
 # }}}
-
-set -g @plugin 'tmux-plugins/tpm' # {{{
+set -g @plugin 'tmux-plugins/tpm'
 # Prefix I - Install plugins & Refresh TMUX env
 # Prefix U - Update plugins & Refresh TMUX env
 # Prefix alt u - Remove/Uninstall plugins not in the list above
-# }}}
 
-if "test ! -d $XDG_CONFIG_HOME/tmux/plugins/tpm" \
-  "run 'git clone https://github.com/tmux-plugins/tpm $XDG_CONFIG_HOME/tmux/plugins/tpm'"
-run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+
+set-environment -g TMUX_CONFIG_HOME "$XDG_CONFIG_HOME/tmux"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$TMUX_CONFIG_HOME/plugins"
+  # if "test ! -d ~/.tmux/plugins/tpm" \
+if "test ! -d $TMUX_PLUGIN_MANAGER_PATH/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm $TMUX_PLUGIN_MANAGER_PATH/tpm'"
+run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
