Collapse into single eval; extract functions

--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -28,8 +28,8 @@ bind -r L resize-pane -R 10
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-bind-key -r Left swap-window -t -1
-bind-key -r Right swap-window -t +1
+bind -r Left swap-window -t -1
+bind -r Right swap-window -t +1
 
 bind-key -r g run -b '~/.dotfiles/bin/openapp || exit 0'
 # bind-key X if-shell -F '#{?pane_input_off,1,0}'
