--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -10,11 +10,10 @@ set -g monitor-activity on
 set -g mouse
 set -g renumber-windows on
 set -g set-titles off
-set -g status 2
+set -g status on
 set -g status-position top
 set -g status-bg colour234
 set -g status-fg colour238
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set-window -g pane-base-index 1
 set-window -g xterm-keys on # to make ctrl-arrow, etc. work
@@ -31,8 +30,8 @@ bind c new-window -c "#{pane_current_path}"
 bind -r Left swap-window -t -1
 bind -r Right swap-window -t +1
 
-bind-key -r g run -b '~/.dotfiles/bin/openapp || exit 0'
-# bind-key X if-shell -F '#{?pane_input_off,1,0}'
+bind -r g run -b '~/.dotfiles/bin/tmux-open-app || exit 0'
+# bind X if-shell -F '#{?pane_input_off,1,0}'
 #     "select-pane -e \; select-pane -T '#{@original_pane_title}'" \
 #     "run-shell \"tmux set-option -p @original_pane_title \\\"\\\$(tmux display-message -p -F '#{pane_title}')\\\"\" \; select-pane -d \; select-pane -T '#{pane_title} [LOCKED]'"
 
@@ -55,38 +54,24 @@ set -g @fzf-url-extra-filter 'grep -oE "zgenom load \b[\w\/]\b"'
 set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 # }}}
 
-set -g @plugin '2kabhishek/tmux2k' # {{{
-set -g @tmux2k-border-contrast false
-set -g @tmux2k-icons-only false
-set -g @tmux2k-left-plugins false
-set -g @tmux2k-right-plugins "pomodoro time battery"
-set -g @tmux2k-show-fahrenheit false
-set -g @tmux2k-show-powerline true
-set -g @tmux2k-theme 'gruvbox'
-set -g @tmux2k-time-format "%Y-%m-%d %H:%M"
-set -g @tmux2k-time-icon " "
-set -g @tmux2k-window-list-alignment left
-set -g @tmux2k-window-list-format '#W #I'
-set -g @tmux2k-window-list-compact true
-# change refresh rate
-set -g @tmux2k-refresh-rate 1
-# }}}
+set -g status-left " "
+set -g window-status-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=#1c1c1c]#I #W#[bg=#1c1c1c,fg=#383838]"
+set -g window-status-current-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=white]#I #W#[bg=#1c1c1c,fg=#383838]"
+set -g window-status-activity-style reverse
+set -g status-right "#[fg=#0A400C,bg=#1c1c1c]#[fg=#1c1c1c,bg=#0A400C]#{pomodoro_status} "
+set -ga status-right "#[fg=#819067,bg=#0A400C]#[fg=#1c1c1c,bg=#819067]%m%d󱛡%H%M "
+set -ga status-right "#[fg=#B1AB86,bg=#819067]#[fg=#1c1c1c,bg=#B1AB86]#(/Users/suweller/.dotfiles/bin/battery.sh -fi) "
 
-# update powerline symbols
-set -g @tmux2k-left-sep ""
-set -g @tmux2k-right-sep ""
-set -g @tmux2k-window-list-left-sep ""
-# set -g @tmux2k-window-list-right-sep ""
 set -g @plugin 'olimorris/tmux-pomodoro-plus' # {{{
 set -g @pomodoro_cancel 'T'
-set -g @pomodoro_complete "#[fg=$text_green]󰗇 "
-set -g @pomodoro_granularity 'on'
-set -g @pomodoro_interval_display " [%s/%s]"
+set -g @pomodoro_complete "#[fg=$text_green]󰗇"
+set -g @pomodoro_granularity 'off'
+set -g @pomodoro_interval_display 'off'
 set -g @pomodoro_notifications 'on'
-set -g @pomodoro_on "#[fg=$text_red]󰐑 "
-set -g @pomodoro_pause "#[fg=$color_yellow]󰐓 "
-set -g @pomodoro_prompt_break "#[fg=$color_green]󰷲 ? "
-set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲 ? "
+set -g @pomodoro_on "#[fg=$text_red]󰐑"
+set -g @pomodoro_pause "#[fg=$color_yellow]󰐓"
+set -g @pomodoro_prompt_break "#[fg=$color_green]󰷲?"
+set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]󰷲?"
 set -g @pomodoro_sound '/System/Library/Sounds/Purr.aiff'
 set -g @pomodoro_toggle 't'
 # }}}
