--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -22,6 +22,7 @@ bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
+bind -r s run-shell "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
 
 # Open new window with current path
 bind '"' split-window -c "#{pane_current_path}"
