--- a/lib/config/tmux/tmux.conf
+++ b/lib/config/tmux/tmux.conf
@@ -55,13 +55,16 @@ set -g @fzf-url-extra-filter 'grep -oE "zgenom load \b[\w\/]\b"'
 set -g @plugin 'roosta/tmux-fuzzback' # {{{ Prefix ? - fzf history
 # }}}
 
-set -g status-left " "
 set -g window-status-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=#1c1c1c]#I #W#[bg=#1c1c1c,fg=#383838]"
 set -g window-status-current-format "#[bg=#1c1c1c,fg=#383838]#[bg=#383838,fg=white]#I #W#[bg=#1c1c1c,fg=#383838]"
 set -g window-status-activity-style reverse
-set -g status-right "#[fg=#0A400C,bg=#1c1c1c]#[fg=#1c1c1c,bg=#0A400C]#{pomodoro_status} "
-set -ga status-right "#[fg=#819067,bg=#0A400C]#[fg=#1c1c1c,bg=#819067]%m%d󱛡%H%M "
-set -ga status-right "#[fg=#B1AB86,bg=#819067]#[fg=#1c1c1c,bg=#B1AB86]#(/Users/suweller/.dotfiles/bin/battery.sh -fi) "
+set -g status-right "#[fg=#0A400C,bg=#1c1c1c]#[fg=#B1AB86,bg=#0A400C]#{pomodoro_status} "
+set -ga status-right "#[fg=#819067,bg=#0A400C]#[fg=#0A400C,bg=#819067]%m%d󱛡%H%M "
+set -ga status-right "#[fg=#B1AB86,bg=#819067]#[fg=#0A400C,bg=#B1AB86]#(/Users/suweller/.dotfiles/bin/battery.sh -di) "
+
+set -g @plugin 'tinted-theming/tinted-tmux' # {{{
+run-shell "tmux set-option -g @tinted-color $(tinty current)"
+# }}}
 
 set -g @plugin 'olimorris/tmux-pomodoro-plus' # {{{
 set -g @pomodoro_cancel 'T'
