--- a/lib/config/mise/config.toml
+++ b/lib/config/mise/config.toml
@@ -9,4 +9,5 @@ idiomatic_version_file_enable_tools = ["ruby", "node", "python"]
 "node" = "latest"
 "ruby" = "latest"
 "rust" = "latest"
-python = "latest"
+"python" = "latest"
+"go" = "latest"
